FO-2946: work in progress